// Vitest Snapshot v1

exports[`(components) atoms/button > take anchor button's snap shot 1`] = `
<div>
  <a
    class="css-1a492j3"
    href="#"
    role="button"
    tabindex="0"
  >
    <p
      class="css-9rw4zt-Button"
    >
      This is test
    </p>
  </a>
</div>
`;

exports[`(components) atoms/button > take default button's snap shot 1`] = `
<div>
  <button
    class="css-1a492j3"
    tabindex="0"
  >
    <p
      class="css-9rw4zt-Button"
    >
      This is test
    </p>
  </button>
</div>
`;
